# pejato_ray_tracing_rs

./: Cargo.toml  README.md  output.ppm  output_gradient.ppm  output_hittable.ppm  output_redsphere.ppm  output_sample.ppm  output_simple_diffusion.ppm  output_sphere_normals.ppm
src/: main.rs
src/ray_tracing/: camera.rs  color.rs  hittable.rs  mod.rs  newtype_impl.rs  point.rs  ray.rs  sphere.rs  vec3.rs
src/ray_tracing/color/: tests.rs
src/ray_tracing/point/: tests.rs
src/ray_tracing/ray/: tests.rs
src/ray_tracing/test_utils/: mod.rs
src/ray_tracing/vec3/: tests.rs
