[package]
name = "pejato_ray_tracing_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.3.0"
derive_more = "0.99.17"

[dev-dependencies]
pretty_assertions = "~1.3.0"
assert_approx_eq = "1.1.0"